Fix image not showing up on home page

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body, html {
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-image: url('images/DSC01718.jpg');
     background-size: cover;
     background-position: center;
 }
